модель данных этапа договора изменен набор атрибутов исправлены имена убрана строка с итогами
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5504 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-table-structure-model_ru.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-table-structure-model_ru.properties
@@ -2,17 +2,23 @@ lecm-contract-table-structure_model.type.lecm-contract-table-structure_stage.tit
 lecm-contract-table-structure_model.type.lecm-contract-table-structure_stage.description=\u042D\u0442\u0430\u043F\u044B \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
 lecm-contract-table-structure_model.property.lecm-contract-table-structure_name.title=\u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
 lecm-contract-table-structure_model.property.lecm-contract-table-structure_name.description=\u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
+lecm-contract-table-structure_model.property.lecm-contract-table-structure_stage-comment.title=\u041A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u0439
+lecm-contract-table-structure_model.property.lecm-contract-table-structure_stage-comment.description=\u041A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u0439
 lecm-contract-table-structure_model.property.lecm-contract-table-structure_start-date.title=\u0414\u0430\u0442\u0430 \u043D\u0430\u0447\u0430\u043B\u0430
 lecm-contract-table-structure_model.property.lecm-contract-table-structure_start-date.description=\u0414\u0430\u0442\u0430 \u043D\u0430\u0447\u0430\u043B\u0430 \u044D\u0442\u0430\u043F\u0430
 lecm-contract-table-structure_model.property.lecm-contract-table-structure_end-date.title=\u0414\u0430\u0442\u0430 \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043D\u0438\u044F
 lecm-contract-table-structure_model.property.lecm-contract-table-structure_end-date.description=\u0414\u0430\u0442\u0430 \u043E\u043A\u043E\u043D\u0447\u0430\u043D\u0438\u044F \u044D\u0442\u0430\u043F\u0430
+lecm-contract-table-structure_model.property.lecm-contract-table-structure_start-date-real.title=\u0424\u0430\u043A\u0442\u0438\u0447\u0435\u0441\u043A\u043E\u0435 \u043D\u0430\u0447\u0430\u043B\u043E
+lecm-contract-table-structure_model.property.lecm-contract-table-structure_start-date-real.description=\u0424\u0430\u043A\u0442\u0438\u0447\u0435\u0441\u043A\u043E\u0435 \u043D\u0430\u0447\u0430\u043B\u043E
+lecm-contract-table-structure_model.property.lecm-contract-table-structure_end-date-real.title=\u0424\u0430\u043A\u0442\u0438\u0447\u0435\u0441\u043A\u043E\u0435 \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043D\u0438\u0435
+lecm-contract-table-structure_model.property.lecm-contract-table-structure_end-date-real.description=\u0424\u0430\u043A\u0442\u0438\u0447\u0435\u0441\u043A\u043E\u0435 \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043D\u0438\u0435
 lecm-contract-table-structure_model.property.lecm-contract-table-structure_stage-amount.title=\u0421\u0443\u043C\u043C\u0430 \u043F\u043E \u044D\u0442\u0430\u043F\u0443
 lecm-contract-table-structure_model.property.lecm-contract-table-structure_stage-amount.description=\u0421\u0443\u043C\u043C\u0430 \u043F\u043E \u044D\u0442\u0430\u043F\u0443
-lecm-contract-table-structure_model.association.lecm-contract-table-structure_status-assoc.title=\u0421\u0442\u0430\u0442\u0443\u0441
-lecm-contract-table-structure_model.association.lecm-contract-table-structure_status-assoc.description=\u0421\u0442\u0430\u0442\u0443\u0441
+lecm-contract-table-structure_model.property.lecm-contract-table-structure_stage-status.title=\u0421\u0442\u0430\u0442\u0443\u0441
+lecm-contract-table-structure_model.property.lecm-contract-table-structure_stage-status.description=\u0421\u0442\u0430\u0442\u0443\u0441 \u044D\u0442\u0430\u043F\u0430
 lecm-contract-table-structure_model.association.lecm-contract-table-structure_responsible-assoc.title=\u041E\u0442\u0432\u0435\u0442\u0441\u0442\u0432\u0435\u043D\u043D\u044B\u0439
 lecm-contract-table-structure_model.association.lecm-contract-table-structure_responsible-assoc.description=\u041E\u0442\u0432\u0435\u0442\u0441\u0442\u0432\u0435\u043D\u043D\u044B\u0439
 lecm-contract-table-structure_model.association.lecm-contract-table-structure_stages-assoc.title=\u042D\u0442\u0430\u043F\u044B \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
 lecm-contract-table-structure_model.association.lecm-contract-table-structure_stages-assoc.description=\u042D\u0442\u0430\u043F\u044B \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
-lecm-contract-table-structure_model.association.lecm-contract-table-structure_attachments-temp-assoc.title=\u0412\u043B\u043E\u0436\u0435\u043D\u0438\u0435
-lecm-contract-table-structure_model.association.lecm-contract-table-structure_attachments-temp-assoc.description=\u0412\u043B\u043E\u0436\u0435\u043D\u0438\u0435
+lecm-contract-table-structure_model.association.lecm-contract-table-structure_attachments-temp-assoc.title=\u0410\u043A\u0442
+lecm-contract-table-structure_model.association.lecm-contract-table-structure_attachments-temp-assoc.description=\u0410\u043A\u0442
