--- a/lecm-contracts/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts/contracts_ru.properties
+++ b/lecm-contracts/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts/contracts_ru.properties
@@ -69,3 +69,4 @@ label.contracts.stage=\u042D\u0442\u0430\u043F\u044B \u0434\u043E\u0433\u043E\u0
 label.contracts.main=\u0421\u0432\u0435\u0434\u0435\u043D\u0438\u044F
 
 label.contracts.attachments=\u0414\u043E\u0433\u043E\u0432\u043E\u0440\u0430 > \u0412\u043B\u043E\u0436\u0435\u043D\u0438\u044F
+stage.totalAmount=\u0421\u0443\u043C\u043C\u0430 \u043F\u043E \u044D\u0442\u0430\u043F\u0443
