Добавлена сортировка в отчеты
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5577 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/repo/src/main/config/messages/reports-editor_ru.properties
+++ b/lecm-reports-editor/repo/src/main/config/messages/reports-editor_ru.properties
@@ -63,6 +63,8 @@ lecm-rpeditor_model.property.lecm-rpeditor_reportObjectsMultiplicity.title=\u041
 lecm-rpeditor_model.property.lecm-rpeditor_reportObjectsMultiplicity.description=\u041E\u0442\u0447\u0435\u0442 \u043F\u043E \u043A\u043E\u043B\u043B\u0435\u043A\u0446\u0438\u0438
 lecm-rpeditor_model.property.lecm-rpeditor_reportQuery.title=\u0422\u0435\u043A\u0441\u0442 \u0437\u0430\u043F\u0440\u043E\u0441\u0430
 lecm-rpeditor_model.property.lecm-rpeditor_reportQuery.description=\u0422\u0435\u043A\u0441\u0442 \u0437\u0430\u043F\u0440\u043E\u0441\u0430
+lecm-rpeditor_model.property.lecm-rpeditor_reportQuerySort.title=\u0421\u043E\u0440\u0442\u0438\u0440\u043E\u0432\u043A\u0430
+lecm-rpeditor_model.property.lecm-rpeditor_reportQuerySort.description=\u0421\u043E\u0440\u0442\u0438\u0440\u043E\u0432\u043A\u0430 (\u0441\u043F\u0438\u0441\u043E\u043A \u0441\u0442\u043E\u043B\u0431\u0446\u043E\u0432 \u0447\u0435\u0440\u0435\u0437 ",")
 lecm-rpeditor_model.property.lecm-rpeditor_reportQueryOffset.title=QueryOffset
 lecm-rpeditor_model.property.lecm-rpeditor_reportQueryOffset.description=QueryOffset
 lecm-rpeditor_model.property.lecm-rpeditor_reportQueryLimit.title=QueryLimit
