--- a/lecm-model-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/formEditor/formEditor_ru.properties
+++ b/lecm-model-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/formEditor/formEditor_ru.properties
@@ -1,1 +1,2 @@
 label.form.attributeTable.fields.add.title=\u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043F\u043E\u043B\u044F \u0438\u0437 \u043C\u043E\u0434\u0435\u043B\u0438
+label.form.type=\u0422\u0438\u043F \u0444\u043E\u0440\u043C\u044B
