--- a/lecm-contracts/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts/contracts_ru.properties
+++ b/lecm-contracts/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts/contracts_ru.properties
@@ -70,3 +70,5 @@ label.contracts.main=\u0421\u0432\u0435\u0434\u0435\u043D\u0438\u044F
 
 label.contracts.attachments=\u0414\u043E\u0433\u043E\u0432\u043E\u0440\u0430 > \u0412\u043B\u043E\u0436\u0435\u043D\u0438\u044F
 stage.totalAmount=\u0421\u0443\u043C\u043C\u0430 \u043F\u043E \u044D\u0442\u0430\u043F\u0443
+label.contracts.start-stage=\u0412 \u0440\u0430\u0431\u043E\u0442\u0443
+label.contracts.end-stage=\u0417\u0430\u043A\u0440\u044B\u0442\u044C
