--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-table-structure-model_ru.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-table-structure-model_ru.properties
@@ -16,8 +16,8 @@ lecm-contract-table-structure_model.property.lecm-contract-table-structure_stage
 lecm-contract-table-structure_model.property.lecm-contract-table-structure_stage-amount.description=\u0421\u0443\u043C\u043C\u0430 \u043F\u043E \u044D\u0442\u0430\u043F\u0443
 lecm-contract-table-structure_model.property.lecm-contract-table-structure_stage-status.title=\u0421\u0442\u0430\u0442\u0443\u0441
 lecm-contract-table-structure_model.property.lecm-contract-table-structure_stage-status.description=\u0421\u0442\u0430\u0442\u0443\u0441 \u044D\u0442\u0430\u043F\u0430
-lecm-contract-table-structure_model.association.lecm-contract-table-structure_responsible-assoc.title=\u041E\u0442\u0432\u0435\u0442\u0441\u0442\u0432\u0435\u043D\u043D\u044B\u0439
-lecm-contract-table-structure_model.association.lecm-contract-table-structure_responsible-assoc.description=\u041E\u0442\u0432\u0435\u0442\u0441\u0442\u0432\u0435\u043D\u043D\u044B\u0439
+lecm-contract-table-structure_model.association.lecm-contract-table-structure_stage-currency-assoc.title=\u0412\u0430\u043B\u044E\u0442\u0430
+lecm-contract-table-structure_model.association.lecm-contract-table-structure_stage-currency-assoc.description=\u0412\u0430\u043B\u044E\u0442\u0430
 lecm-contract-table-structure_model.association.lecm-contract-table-structure_stages-assoc.title=\u042D\u0442\u0430\u043F\u044B \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
 lecm-contract-table-structure_model.association.lecm-contract-table-structure_stages-assoc.description=\u042D\u0442\u0430\u043F\u044B \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
 lecm-contract-table-structure_model.association.lecm-contract-table-structure_attachments-temp-assoc.title=\u0410\u043A\u0442
