--- a/lecm-model-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/formEditor/formEditor_ru.properties
+++ b/lecm-model-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/formEditor/formEditor_ru.properties
@@ -1,3 +1,6 @@
+header.doc-model-list.label=\u041C\u043E\u0434\u0435\u043B\u0438 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u043E\u0432
+header.doc-model-list.description=\u041C\u043E\u0434\u0435\u043B\u0438 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u043E\u0432
+
 label.form.attributeTable.fields.add.title=\u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043F\u043E\u043B\u044F \u0438\u0437 \u043C\u043E\u0434\u0435\u043B\u0438
 label.form.attributeTable.fake.field.add.title=\u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0444\u0438\u043A\u0442\u0438\u0432\u043D\u043E\u0435 \u043F\u043E\u043B\u0435
 label.form.type=\u0422\u0438\u043F \u0444\u043E\u0440\u043C\u044B
