[+]флаг для выбора  начального статуса
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6084 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-incoming/repo/src/main/config/messages/lecm-incoming-model_ru.properties
+++ b/lecm-incoming/repo/src/main/config/messages/lecm-incoming-model_ru.properties
@@ -1,5 +1,5 @@
-lecm-incoming_model.type.lecm-incoming_document.title=Incoming document
-lecm-incoming_model.type.lecm-incoming_document.description=Incoming document
+lecm-incoming_model.type.lecm-incoming_document.title=\u0412\u0445\u043E\u0434\u044F\u0449\u0438\u0439
+lecm-incoming_model.type.lecm-incoming_document.description=\u0412\u0445\u043E\u0434\u044F\u0449\u0438\u0439
 
 lecm-incoming_model.property.lecm-incoming_note.title=\u041F\u0440\u0438\u043C\u0435\u0447\u0430\u043D\u0438\u0435
 lecm-incoming_model.property.lecm-incoming_note.description=\u041F\u0440\u0438\u043C\u0435\u0447\u0430\u043D\u0438\u0435
