--- a/lecm-incoming/share/src/main/resources/alfresco/web-extension/ru/it/lecm/incoming/incoming_ru.properties
+++ b/lecm-incoming/share/src/main/resources/alfresco/web-extension/ru/it/lecm/incoming/incoming_ru.properties
@@ -11,3 +11,6 @@ page.lecm-incoming_document=\u0412\u0445\u043E\u0434\u044F\u0449\u0438\u0435
 button.lecm-incoming_document.new=\u041D\u043E\u0432\u044B\u0439 \u0412\u0445\u043E\u0434\u044F\u0449\u0438\u0439
 label.create-lecm-incoming_document=\u0421\u043E\u0437\u0434\u0430\u0442\u044C \u0412\u0445\u043E\u0434\u044F\u0449\u0438\u0439
 label.filter-lecm-incoming_document=\u0412\u0445\u043E\u0434\u044F\u0449\u0438\u0435
+
+title.employee.select=\u0412\u044B\u0431\u043E\u0440 \u0441\u043E\u0442\u0440\u0443\u0434\u043D\u0438\u043A\u0430
+title.organizationUnit.select=\u0412\u044B\u0431\u043E\u0440 \u043F\u043E\u0434\u0440\u0430\u0437\u0434\u0435\u043B\u0435\u043D\u0438\u044F
