--- a/lecm-documents/repo/src/main/config/messages/lecm-document-aspects-model_ru.properties
+++ b/lecm-documents/repo/src/main/config/messages/lecm-document-aspects-model_ru.properties
@@ -6,3 +6,5 @@ lecm-document-aspects_aspects.property.lecm-document-aspects_rated-persons-count
 lecm-document-aspects_aspects.association.lecm-document-aspects_parent-document-assoc.title=\u0420\u043E\u0434\u0438\u0442\u0435\u043B\u044C\u0441\u043A\u0438\u0439 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442
 
 lecm-document-aspects_aspects.association.lecm-document-aspects_response-to-assoc.title=\u0412 \u043E\u0442\u0432\u0435\u0442 \u043D\u0430
+
+lecm-document-aspects_aspects.property.lecm-document-aspects_is-shared-folder.title=\u041E\u0431\u0449\u0430\u044F \u043F\u0430\u043F\u043A\u0430
