--- a/lecm-incoming/share/src/main/resources/alfresco/web-extension/ru/it/lecm/incoming/incoming_ru.properties
+++ b/lecm-incoming/share/src/main/resources/alfresco/web-extension/ru/it/lecm/incoming/incoming_ru.properties
@@ -14,3 +14,5 @@ label.filter-lecm-incoming_document=\u0412\u0445\u043E\u0434\u044F\u0449\u0438\u
 
 title.employee.select=\u0412\u044B\u0431\u043E\u0440 \u0441\u043E\u0442\u0440\u0443\u0434\u043D\u0438\u043A\u0430
 title.organizationUnit.select=\u0412\u044B\u0431\u043E\u0440 \u043F\u043E\u0434\u0440\u0430\u0437\u0434\u0435\u043B\u0435\u043D\u0438\u044F
+
+label.search.similar=\u0418\u0441\u043A\u0430\u0442\u044C \u043F\u043E\u0445\u043E\u0436\u0438\u0435
