--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-model_ru.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-model_ru.properties
@@ -42,7 +42,7 @@ lecm-contract_model.association.lecm-contract_subjectContract-assoc.title=\u0422
 lecm-contract_model.association.lecm-contract_subjectContract-assoc.description=\u0422\u0435\u043C\u0430\u0442\u0438\u043A\u0430 \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
 lecm-contract_model.association.lecm-contract_reasonDelete-assoc.title=\u041F\u0440\u0438\u0447\u0438\u043D\u0430 \u0443\u0434\u0430\u043B\u0435\u043D\u0438\u044F
 lecm-contract_model.association.lecm-contract_reasonDelete-assoc.description=\u041F\u0440\u0438\u0447\u0438\u043D\u0430 \u0443\u0434\u0430\u043B\u0435\u043D\u0438\u044F
-lecm-contract_model.association.lecm-contract_representative-assoc.title=\u041F\u0440\u0435\u0434\u0441\u0442\u0430\u0432\u0438\u0442\u0435\u043B\u0438
-lecm-contract_model.association.lecm-contract_representative-assoc.description=\u041F\u0440\u0435\u0434\u0441\u0442\u0430\u0432\u0438\u0442\u0435\u043B\u0438
+lecm-contract_model.association.lecm-contract_representative-assoc.title=\u0410\u0434\u0440\u0435\u0441\u0430\u043D\u0442\u044B
+lecm-contract_model.association.lecm-contract_representative-assoc.description=\u0410\u0434\u0440\u0435\u0441\u0430\u043D\u0442\u044B
 lecm-contract-aspect_model.association.lecm-contract-aspect_reasonDelete-assoc.title=\u041F\u0440\u0438\u0447\u0438\u043D\u0430 \u0443\u0434\u0430\u043B\u0435\u043D\u0438\u044F
 lecm-contract-aspect_model.association.lecm-contract-aspect_reasonDelete-assoc.description=\u041F\u0440\u0438\u0447\u0438\u043D\u0430 \u0443\u0434\u0430\u043B\u0435\u043D\u0438\u044F
