--- a/lecm-incoming/repo/src/main/config/messages/lecm-incoming-workflow_ru.properties
+++ b/lecm-incoming/repo/src/main/config/messages/lecm-incoming-workflow_ru.properties
@@ -1,1 +1,3 @@
 lecmIncomingWf_model.association.lecmIncomingWf_repeatedToDocument.title=\u041F\u043E\u0432\u0442\u043E\u0440\u043D\u044B\u0439 \u043A
+
+lecmIncomingWf_model.association.lecmIncomingWf_sendToReviewRecipient.title=\u041F\u043E\u043B\u0443\u0447\u0430\u0442\u0435\u043B\u044C
