--- a/lecm-incoming/repo/src/main/config/messages/lecm-incoming-model_ru.properties
+++ b/lecm-incoming/repo/src/main/config/messages/lecm-incoming-model_ru.properties
@@ -33,3 +33,6 @@ lecm-incoming_model.association.lecm-incoming_delivery-method-assoc.title=\u0421
 lecm-incoming_model.association.lecm-incoming_delivery-method-assoc.description=\u0421\u043F\u043E\u0441\u043E\u0431 \u0434\u043E\u0441\u0442\u0430\u0432\u043A\u0438
 lecm-incoming_model.association.lecm-incoming_recipient-assoc.title=\u041F\u043E\u043B\u0443\u0447\u0430\u0442\u0435\u043B\u044C
 lecm-incoming_model.association.lecm-incoming_recipient-assoc.description=\u041F\u043E\u043B\u0443\u0447\u0430\u0442\u0435\u043B\u044C
+
+lecmIncomingWf_model.association.lecmIncomingWf_recipient.title=\u041F\u043E\u043B\u0443\u0447\u0430\u0442\u0435\u043B\u044C
+lecmIncomingWf_model.association.lecmIncomingWf_recipient.description=\u041F\u043E\u043B\u0443\u0447\u0430\u0442\u0435\u043B\u044C
