[ВАЖНО] ALF-1843  Базовый тип для СЭД Примечание: после этого коммита почти наверняка придеться чистить базу и репозиторий из-за серьезных изменений в модели
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6189 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-incoming/repo/src/main/config/messages/lecm-incoming-model_ru.properties
+++ b/lecm-incoming/repo/src/main/config/messages/lecm-incoming-model_ru.properties
@@ -1,12 +1,12 @@
 lecm-incoming_model.type.lecm-incoming_document.title=\u0412\u0445\u043E\u0434\u044F\u0449\u0438\u0439
 lecm-incoming_model.type.lecm-incoming_document.description=\u0412\u0445\u043E\u0434\u044F\u0449\u0438\u0439
 
-lecm-incoming_model.property.lecm-incoming_note.title=\u041F\u0440\u0438\u043C\u0435\u0447\u0430\u043D\u0438\u0435
-lecm-incoming_model.property.lecm-incoming_note.description=\u041F\u0440\u0438\u043C\u0435\u0447\u0430\u043D\u0438\u0435
-lecm-incoming_model.property.lecm-incoming_title.title=\u0417\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A
-lecm-incoming_model.property.lecm-incoming_title.description=\u0417\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A
-lecm-incoming_model.property.lecm-incoming_summaryContent.title=\u0421\u043E\u0434\u0435\u0440\u0436\u0430\u043D\u0438\u0435
-lecm-incoming_model.property.lecm-incoming_summaryContent.description=\u0421\u043E\u0434\u0435\u0440\u0436\u0430\u043D\u0438\u0435
+lecm-incoming_model.property.lecm-eds-document_note.title=\u041F\u0440\u0438\u043C\u0435\u0447\u0430\u043D\u0438\u0435
+lecm-incoming_model.property.lecm-eds-document_note.description=\u041F\u0440\u0438\u043C\u0435\u0447\u0430\u043D\u0438\u0435
+lecm-incoming_model.property.lecm-document_title.title=\u0417\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A
+lecm-incoming_model.property.lecm-document_title.description=\u0417\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A
+lecm-incoming_model.property.lecm-eds-document_summaryContent.title=\u0421\u043E\u0434\u0435\u0440\u0436\u0430\u043D\u0438\u0435
+lecm-incoming_model.property.lecm-eds-document_summaryContent.description=\u0421\u043E\u0434\u0435\u0440\u0436\u0430\u043D\u0438\u0435
 lecm-incoming_model.property.lecm-incoming_is-on-control.title=\u041D\u0430 \u043A\u043E\u043D\u0442\u0440\u043E\u043B\u0435
 lecm-incoming_model.property.lecm-incoming_is-on-control.description=\u041D\u0430 \u043A\u043E\u043D\u0442\u0440\u043E\u043B\u0435
 lecm-incoming_model.property.lecm-incoming_is-not-registered.title=\u041D\u0435\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u0443\u0435\u043C\u044B\u0439
@@ -21,14 +21,14 @@ lecm-incoming_model.property.lecm-incoming_execution-date.description=\u0421\u04
 
 lecm-incoming_model.association.lecm-incoming_registrator-assoc.title=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0442\u043E\u0440
 lecm-incoming_model.association.lecm-incoming_registrator-assoc.description=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0442\u043E\u0440
-lecm-incoming_model.association.lecm-incoming_file-register-assoc.title=\u041D\u043E\u043C\u0435\u043D\u043A\u043B\u0430\u0442\u0443\u0440\u0430 \u0434\u0435\u043B
-lecm-incoming_model.association.lecm-incoming_file-register-assoc.description=\u041D\u043E\u043C\u0435\u043D\u043A\u043B\u0430\u0442\u0443\u0440\u0430 \u0434\u0435\u043B
-lecm-incoming_model.association.lecm-incoming_document-type-assoc.title=\u0412\u0438\u0434 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
-lecm-incoming_model.association.lecm-incoming_document-type-assoc.description=\u0412\u0438\u0434 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
+lecm-incoming_model.association.lecm-eds-document_file-register-assoc.title=\u041D\u043E\u043C\u0435\u043D\u043A\u043B\u0430\u0442\u0443\u0440\u0430 \u0434\u0435\u043B
+lecm-incoming_model.association.lecm-eds-document_file-register-assoc.description=\u041D\u043E\u043C\u0435\u043D\u043A\u043B\u0430\u0442\u0443\u0440\u0430 \u0434\u0435\u043B
+lecm-incoming_model.association.lecm-eds-document_document-type-assoc.title=\u0412\u0438\u0434 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
+lecm-incoming_model.association.lecm-eds-document_document-type-assoc.description=\u0412\u0438\u0434 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
 lecm-incoming_model.association.lecm-incoming_links-assoc.title=\u0421\u0441\u044B\u043B\u043A\u0438
 lecm-incoming_model.association.lecm-incoming_links-assoc.description=\u0421\u0441\u044B\u043B\u043A\u0438
-lecm-incoming_model.association.lecm-incoming_subject-assoc.title=\u0422\u0435\u043C\u0430\u0442\u0438\u043A\u0430
-lecm-incoming_model.association.lecm-incoming_subject-assoc.description=\u0422\u0435\u043C\u0430\u0442\u0438\u043A\u0430
+lecm-incoming_model.association.lecm-document_subject-assoc.title=\u0422\u0435\u043C\u0430\u0442\u0438\u043A\u0430
+lecm-incoming_model.association.lecm-document_subject-assoc.description=\u0422\u0435\u043C\u0430\u0442\u0438\u043A\u0430
 lecm-incoming_model.association.lecm-incoming_delivery-method-assoc.title=\u0421\u043F\u043E\u0441\u043E\u0431 \u0434\u043E\u0441\u0442\u0430\u0432\u043A\u0438
 lecm-incoming_model.association.lecm-incoming_delivery-method-assoc.description=\u0421\u043F\u043E\u0441\u043E\u0431 \u0434\u043E\u0441\u0442\u0430\u0432\u043A\u0438
 lecm-incoming_model.association.lecm-incoming_recipient-assoc.title=\u041F\u043E\u043B\u0443\u0447\u0430\u0442\u0435\u043B\u044C
