--- a/lecm-documents/repo/src/main/config/messages/lecm-documents_ru.properties
+++ b/lecm-documents/repo/src/main/config/messages/lecm-documents_ru.properties
@@ -2,6 +2,8 @@ lecm-document_model.property.lecm-document_regnum.title=\u0420\u0435\u0433\u0438
 lecm-document_model.property.lecm-document_regnum.description=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u043E\u043D\u043D\u044B\u0439 \u043D\u043E\u043C\u0435\u0440
 lecm-document_model.property.lecm-document_creator.title=\u0410\u0432\u0442\u043E\u0440
 lecm-document_model.property.lecm-document_creator.description=\u0410\u0432\u0442\u043E\u0440
+lecm-document_model.property.lecm-document_doc-type.title=\u0422\u0438\u043F
+lecm-document_model.property.lecm-document_doc-type.description=\u0422\u0438\u043F
 
 lecm-connect_dictionary-connection.type.lecm-connect_connection.title=\u0421\u0432\u044F\u0437\u0438
 lecm-connect_dictionary-connection.association.lecm-connect_primary-document-assoc.title=\u0418\u0441\u0445\u043E\u0434\u043D\u044B\u0439 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442
