[+] Добавление поля "Общая область хранения" для входящих при настройке доступа в МС
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6191 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/repo/src/main/config/messages/lecm-document-aspects-model_ru.properties
+++ b/lecm-documents/repo/src/main/config/messages/lecm-document-aspects-model_ru.properties
@@ -7,4 +7,4 @@ lecm-document-aspects_aspects.association.lecm-document-aspects_parent-document-
 
 lecm-document-aspects_aspects.association.lecm-document-aspects_response-to-assoc.title=\u0412 \u043E\u0442\u0432\u0435\u0442 \u043D\u0430
 
-lecm-document-aspects_aspects.property.lecm-document-aspects_is-shared-folder.title=\u041E\u0431\u0449\u0430\u044F \u043F\u0430\u043F\u043A\u0430
+lecm-document-aspects_aspects.property.lecm-document-aspects_is-shared-folder.title=\u041E\u0431\u0449\u0430\u044F \u043E\u0431\u043B\u0430\u0441\u0442\u044C \u0445\u0440\u0430\u043D\u0435\u043D\u0438\u044F
