--- a/lecm-errands/repo/src/main/config/messages/lecm-errands-model_ru.properties
+++ b/lecm-errands/repo/src/main/config/messages/lecm-errands-model_ru.properties
@@ -54,6 +54,7 @@ lecm-errands_model.type.lecm-errands_settings.title=\u041D\u0430\u0441\u0442\u04
 lecm-errands_model.type.lecm-errands_settings.description=\u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u043F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u0439
 lecm-errands_model.property.lecm-errands_settings-mode-choosing-executors.title=\u0420\u0435\u0436\u0438\u043C \u0432\u044B\u0431\u043E\u0440\u0430 \u0438\u0441\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u0435\u0439
 lecm-errands_model.property.lecm-errands_settings-mode-choosing-executors.description=\u0420\u0435\u0436\u0438\u043C \u0432\u044B\u0431\u043E\u0440\u0430 \u0438\u0441\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u0435\u0439
+lecm-errands_model.property.lecm-errands_settings-transfer-rights.title=\u041F\u0435\u0440\u0435\u0434\u0430\u0432\u0430\u0442\u044C \u043F\u0440\u0430\u0432\u0430 \u043D\u0430 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442-\u043E\u0441\u043D\u043E\u0432\u0430\u043D\u0438\u0435
 
 lecm-errands_model.type.lecm-errands_user-settings.title=\u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C\u0441\u043A\u0438\u0435 \u043D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u043F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u0439
 lecm-errands_model.type.lecm-errands_user-settings.description=\u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C\u0441\u043A\u0438\u0435 \u043D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u043F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u0439
