--- a/lecm-incoming/repo/src/main/config/messages/lecm-incoming-model_ru.properties
+++ b/lecm-incoming/repo/src/main/config/messages/lecm-incoming-model_ru.properties
@@ -36,3 +36,7 @@ lecm-incoming_model.association.lecm-incoming_recipient-assoc.description=\u041F
 
 lecmIncomingWf_model.association.lecmIncomingWf_recipient.title=\u041F\u043E\u043B\u0443\u0447\u0430\u0442\u0435\u043B\u044C
 lecmIncomingWf_model.association.lecmIncomingWf_recipient.description=\u041F\u043E\u043B\u0443\u0447\u0430\u0442\u0435\u043B\u044C
+repositoryReceiverExecutor.title=Logic ECM. \u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435 \u0432\u0445\u043E\u0434\u044F\u0449\u0435\u0433\u043E \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
+repositoryReceiverExecutor.description=Logic ECM. \u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435 \u0432\u0445\u043E\u0434\u044F\u0449\u0435\u0433\u043E \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
+emailRepositoryReceiverExecutor.description=Logic ECM. \u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435 \u0432\u0445\u043E\u0434\u044F\u0449\u0435\u0433\u043E \u0438\u0437 E-Mail
+emailRepositoryReceiverExecutor.title=Logic ECM. \u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435 \u0432\u0445\u043E\u0434\u044F\u0449\u0435\u0433\u043E \u0438\u0437 E-Mail
