--- a/lecm-arm/repo/src/main/config/messages/lecm-arm_ru.properties
+++ b/lecm-arm/repo/src/main/config/messages/lecm-arm_ru.properties
@@ -10,6 +10,7 @@ lecm-arm_model.type.lecm-arm_node.title=\u0423\u0437\u0435\u043B
 lecm-arm_model.association.lecm-arm_node-query-assoc.title=\u041F\u0440\u0430\u0432\u0438\u043B\u043E \u043F\u043E\u0441\u0442\u0440\u043E\u0435\u043D\u0438\u044F \u0443\u0437\u043B\u043E\u0432
 
 lecm-arm_model.property.lecm-arm_types.title=\u0422\u0438\u043F\u044B
+lecm-arm_model.property.lecm-arm_order.title=\u041F\u043E\u0437\u0438\u0446\u0438\u044F
 lecm-arm_model.property.lecm-arm_filters.title=\u0424\u0438\u043B\u044C\u0442\u0440\u044B
 lecm-arm_model.property.lecm-arm_counter-enable.title=\u0412\u043A\u043B\u044E\u0447\u0438\u0442\u044C \u0441\u0447\u0451\u0442\u0447\u0438\u043A
 lecm-arm_model.property.lecm-arm_counter-limitation.title=\u041E\u0433\u0440\u0430\u043D\u0438\u0447\u0435\u043D\u0438\u0435 \u0434\u043B\u044F \u0441\u0447\u0451\u0442\u0447\u0438\u043A\u0430
