--- a/lecm-arm/repo/src/main/config/messages/lecm-arm_ru.properties
+++ b/lecm-arm/repo/src/main/config/messages/lecm-arm_ru.properties
@@ -4,13 +4,13 @@ lecm-arm_model.property.lecm-arm_use-by-default.title=\u0418\u0441\u043F\u043E\u
 
 lecm-arm_model.type.lecm-arm_accordion.title=\u0410\u043A\u043A\u043E\u0440\u0434\u0435\u043E\u043D
 lecm-arm_model.association.lecm-arm_business-roles-assoc.title=\u0411\u0438\u0437\u043D\u0435\u0441 \u0440\u043E\u043B\u0438
-lecm-arm_model.association.lecm-arm_accordion-query-assoc.title=\u041F\u0440\u0430\u0432\u0438\u043B\u043E \u043F\u043E\u0441\u0442\u0440\u043E\u0435\u043D\u0438\u044F \u0443\u0437\u043B\u043E\u0432
 
 lecm-arm_model.type.lecm-arm_node.title=\u0423\u0437\u0435\u043B
-lecm-arm_model.association.lecm-arm_node-query-assoc.title=\u041F\u0440\u0430\u0432\u0438\u043B\u043E \u043F\u043E\u0441\u0442\u0440\u043E\u0435\u043D\u0438\u044F \u0443\u0437\u043B\u043E\u0432
+lecm-arm_model.association.lecm-arm_node-child-rule-assoc.title=\u0414\u0438\u043D\u0430\u043C\u0438\u0447\u0435\u0441\u043A\u043E\u0435 \u043F\u043E\u0441\u0442\u0440\u043E\u0435\u043D\u0438\u0435 \u0443\u0437\u043B\u043E\u0432
 
 lecm-arm_model.property.lecm-arm_types.title=\u0422\u0438\u043F\u044B
 lecm-arm_model.property.lecm-arm_order.title=\u041F\u043E\u0437\u0438\u0446\u0438\u044F
+lecm-arm_model.property.lecm-arm_search-query.title=\u041F\u043E\u0438\u0441\u043A\u043E\u0432\u044B\u0439 \u0437\u0430\u043F\u0440\u043E\u0441
 lecm-arm_model.property.lecm-arm_filters.title=\u0424\u0438\u043B\u044C\u0442\u0440\u044B
 lecm-arm_model.property.lecm-arm_counter-enable.title=\u0412\u043A\u043B\u044E\u0447\u0438\u0442\u044C \u0441\u0447\u0451\u0442\u0447\u0438\u043A
 lecm-arm_model.property.lecm-arm_counter-limitation.title=\u041E\u0433\u0440\u0430\u043D\u0438\u0447\u0435\u043D\u0438\u0435 \u0434\u043B\u044F \u0441\u0447\u0451\u0442\u0447\u0438\u043A\u0430
@@ -23,9 +23,7 @@ lecm-arm_model.property.lecm-arm_field-name.title=\u041D\u0430\u0437\u0432\u0430
 lecm-arm_model.property.lecm-arm_field-format-string.title=\u0424\u043E\u0440\u043C\u0430\u0442\u043D\u0430\u044F \u0441\u0442\u0440\u043E\u043A\u0430
 lecm-arm_model.property.lecm-arm_field-sortable.title=\u0421\u043E\u0440\u0442\u0438\u0440\u0443\u0435\u043C\u043E\u0435
 
-lecm-arm_model.property.lecm-arm_search-query.title=\u041F\u043E\u0438\u0441\u043A\u043E\u0432\u044B\u0439 \u0437\u0430\u043F\u0440\u043E\u0441
-lecm-arm_model.type.lecm-arm_static-query.title=\u0421\u0442\u0430\u0442\u0438\u0447\u0435\u0441\u043A\u043E\u0435 \u043F\u043E\u0441\u0442\u0440\u043E\u0435\u043D\u0438\u0435 \u0443\u0437\u043B\u043E\u0432
-lecm-arm_model.type.lecm-arm_dynamic-query.title=\u0414\u0438\u043D\u0430\u043C\u0438\u0447\u0435\u0441\u043A\u043E\u0435 \u043F\u043E\u0441\u0442\u0440\u043E\u0435\u043D\u0438\u0435 \u0443\u0437\u043B\u043E\u0432 \u043F\u043E \u0437\u0430\u043F\u0440\u043E\u0441\u0443
-lecm-arm_model.property.lecm-arm_list-query.title=\u0417\u0430\u043F\u0440\u043E\u0441 \u0434\u043B\u044F \u0441\u043F\u0438\u0441\u043A\u0430
-lecm-arm_model.type.lecm-arm_dynamic-dictionary-query.title=\u0414\u0438\u043D\u0430\u043C\u0438\u0447\u0435\u0441\u043A\u043E\u0435 \u043F\u043E\u0441\u0442\u0440\u043E\u0435\u043D\u0438\u0435 \u0443\u0437\u043B\u043E\u0432 \u043F\u043E \u0441\u043F\u0440\u0430\u0432\u043E\u0447\u043D\u0438\u043A\u0443
-lecm-arm_model.association.lecm-arm_query-dictionary-assoc.title=\u0421\u043F\u0440\u0430\u0432\u043E\u0447\u043D\u0438\u043A
+lecm-arm_model.type.lecm-arm_query-child-rule.title=\u041F\u043E \u0437\u0430\u043F\u0440\u043E\u0441\u0443
+lecm-arm_model.property.lecm-arm_list-query-child-rule.title=\u0417\u0430\u043F\u0440\u043E\u0441 \u0434\u043B\u044F \u0441\u043F\u0438\u0441\u043A\u0430
+lecm-arm_model.type.lecm-arm_dictionary-child-rule.title=\u041F\u043E \u0441\u043F\u0440\u0430\u0432\u043E\u0447\u043D\u0438\u043A\u0443
+lecm-arm_model.association.lecm-arm_child-rule-dictionary-assoc.title=\u0421\u043F\u0440\u0430\u0432\u043E\u0447\u043D\u0438\u043A
