ALF-1896 Изменения в структуре хранения регистрационных данных
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6464 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/repo/src/main/config/messages/lecm-documents_ru.properties
+++ b/lecm-documents/repo/src/main/config/messages/lecm-documents_ru.properties
@@ -1,5 +1,5 @@
-lecm-document_model.property.lecm-document_regnum.title=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u043E\u043D\u043D\u044B\u0439 \u043D\u043E\u043C\u0435\u0440
-lecm-document_model.property.lecm-document_regnum.description=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u043E\u043D\u043D\u044B\u0439 \u043D\u043E\u043C\u0435\u0440
+lecm-document_model.property.lecm-document_regnum.title=\u041D\u043E\u043C\u0435\u0440
+lecm-document_model.property.lecm-document_regnum.description=\u041D\u043E\u043C\u0435\u0440
 lecm-document_model.property.lecm-document_creator.title=\u0410\u0432\u0442\u043E\u0440
 lecm-document_model.property.lecm-document_creator.description=\u0410\u0432\u0442\u043E\u0440
 lecm-document_model.property.lecm-document_doc-type.title=\u0422\u0438\u043F
