[~] АРМ: заготовка под справочник фильтров
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6505 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-arm/repo/src/main/config/messages/lecm-arm_ru.properties
+++ b/lecm-arm/repo/src/main/config/messages/lecm-arm_ru.properties
@@ -27,3 +27,10 @@ lecm-arm_model.type.lecm-arm_query-child-rule.title=\u041F\u043E \u0437\u0430\u0
 lecm-arm_model.property.lecm-arm_list-query-child-rule.title=\u0417\u0430\u043F\u0440\u043E\u0441 \u0434\u043B\u044F \u0441\u043F\u0438\u0441\u043A\u0430
 lecm-arm_model.type.lecm-arm_dictionary-child-rule.title=\u041F\u043E \u0441\u043F\u0440\u0430\u0432\u043E\u0447\u043D\u0438\u043A\u0443
 lecm-arm_model.association.lecm-arm_child-rule-dictionary-assoc.title=\u0421\u043F\u0440\u0430\u0432\u043E\u0447\u043D\u0438\u043A
+
+lecm-arm_model.type.lecm-arm_filter.title=\u0424\u0438\u043B\u044C\u0442\u0440
+lecm-arm_model.property.lecm-arm_filter-code.title=\u041A\u043E\u0434
+lecm-arm_model.property.lecm-arm_filter-multiple-select.title=\u041C\u043D\u043E\u0436\u0435\u0441\u0442\u0432\u0435\u043D\u043D\u044B\u0439 \u0432\u044B\u0431\u043E\u0440
+lecm-arm_model.property.lecm-arm_filter-query.title=FTS \u0417\u0430\u043F\u0440\u043E\u0441
+lecm-arm_model.property.lecm-arm_filter-class.title=\u041A\u043B\u0430\u0441\u0441
+lecm-arm_model.property.lecm-arm_filter-values.title=\u0421\u043F\u0438\u0441\u043E\u043A \u0437\u043D\u0430\u0447\u0435\u043D\u0438\u0439
