--- a/lecm-arm/repo/src/main/config/messages/lecm-arm_ru.properties
+++ b/lecm-arm/repo/src/main/config/messages/lecm-arm_ru.properties
@@ -16,6 +16,7 @@ lecm-arm_model.property.lecm-arm_counter-enable.title=\u0412\u043A\u043B\u044E\u
 lecm-arm_model.property.lecm-arm_counter-limitation.title=\u041E\u0433\u0440\u0430\u043D\u0438\u0447\u0435\u043D\u0438\u0435 \u0434\u043B\u044F \u0441\u0447\u0451\u0442\u0447\u0438\u043A\u0430
 lecm-arm_model.property.lecm-arm_counter-description.title=\u041E\u043F\u0438\u0441\u0430\u043D\u0438\u0435 \u0441\u0447\u0451\u0442\u0447\u0438\u043A\u0430
 lecm-arm_model.association.lecm-arm_fields-assoc.title=\u0421\u043F\u0438\u0441\u043E\u043A \u043A\u043E\u043B\u043E\u043D\u043E\u043A
+lecm-arm_model.association.lecm-arm_filters-assoc.title=\u0424\u0438\u043B\u044C\u0442\u0440\u044B
 
 lecm-arm_model.type.lecm-arm_field.title=\u041A\u043E\u043B\u043E\u043D\u043A\u0430
 lecm-arm_model.property.lecm-arm_field-title.title=\u0417\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A
