ALF-1858: Структура данных для хранения настроек АРМов - добавлено правило построения узлов по статусам
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6517 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-arm/repo/src/main/config/messages/lecm-arm_ru.properties
+++ b/lecm-arm/repo/src/main/config/messages/lecm-arm_ru.properties
@@ -28,6 +28,14 @@ lecm-arm_model.type.lecm-arm_query-child-rule.title=\u041F\u043E \u0437\u0430\u0
 lecm-arm_model.property.lecm-arm_list-query-child-rule.title=\u0417\u0430\u043F\u0440\u043E\u0441 \u0434\u043B\u044F \u0441\u043F\u0438\u0441\u043A\u0430
 lecm-arm_model.type.lecm-arm_dictionary-child-rule.title=\u041F\u043E \u0441\u043F\u0440\u0430\u0432\u043E\u0447\u043D\u0438\u043A\u0443
 lecm-arm_model.association.lecm-arm_child-rule-dictionary-assoc.title=\u0421\u043F\u0440\u0430\u0432\u043E\u0447\u043D\u0438\u043A
+lecm-arm_model.type.lecm-arm_statuses-child-rule.title=\u041F\u043E \u0441\u0442\u0430\u0442\u0443\u0441\u0430\u043C
+lecm-arm_model.property.lecm-arm_statuses-rule.title=\u041F\u0440\u0430\u0432\u0438\u043B\u043E
+lecm-arm_model.property.lecm-arm_selected-statuses.title=\u0421\u0442\u0430\u0442\u0443\u0441\u044B
+listconstraint.lecm-arm_statuses-rule-constraint.ALL=\u0412\u0441\u0435
+listconstraint.lecm-arm_statuses-rule-constraint.ALL_NOT_ARCHIVE=\u0412\u0441\u0435 \u043D\u0435 \u0430\u0440\u0445\u0438\u0432\u043D\u044B\u0435
+listconstraint.lecm-arm_statuses-rule-constraint.ALL_ARCHIVE=\u0412\u0441\u0435 \u0430\u0440\u0445\u0438\u0432\u043D\u044B\u0435
+listconstraint.lecm-arm_statuses-rule-constraint.SELECTED=\u041F\u0435\u0440\u0435\u0447\u0438\u0441\u043B\u0435\u043D\u043D\u044B\u0435
+listconstraint.lecm-arm_statuses-rule-constraint.EXCEPT_SELECTED=\u041A\u0440\u043E\u043C\u0435 \u043F\u0435\u0440\u0435\u0447\u0438\u0441\u043B\u0435\u043D\u043D\u044B\u0445
 
 lecm-arm_model.type.lecm-arm_filter.title=\u0424\u0438\u043B\u044C\u0442\u0440
 lecm-arm_model.property.lecm-arm_filter-code.title=\u041A\u043E\u0434
