[~] АРМ:  механизм фильтров
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6538 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-arm/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/arm/documents-list/grid/datagrid.get_ru.properties
+++ b/lecm-arm/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/arm/documents-list/grid/datagrid.get_ru.properties
@@ -52,4 +52,4 @@ label.keywords=\u041A\u043B\u044E\u0447\u0435\u0432\u044B\u0435 \u0441\u043B\u04
 logicecm.dictionary.view=\u041F\u0440\u043E\u0441\u043C\u043E\u0442\u0440
 
 arm.filters.current=\u0422\u0435\u043A\u0443\u0449\u0438\u0435 \u0444\u0438\u043B\u044C\u0442\u0440\u044B
-arm.delete.all-filters=\u043E\u0447\u0438\u0442\u0441\u0442\u0438\u0442\u044C \u0432\u0441\u0435
+arm.delete.all-filters=\u043E\u0447\u0438\u0441\u0442\u0438\u0442\u044C \u0432\u0441\u0435
