ALF-1897 Обеспечить возможность выбора шаблона отчета пользователем - Интерфейс в РО
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6582 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/repo/src/main/config/messages/reports-editor_ru.properties
+++ b/lecm-reports-editor/repo/src/main/config/messages/reports-editor_ru.properties
@@ -28,6 +28,8 @@ lecm-rpeditor_model.property.lecm-rpeditor_reportParameterTypeLabel2.description
 
 lecm-rpeditor_model.type.lecm-rpeditor_reportTemplate.title=\u0428\u0430\u0431\u043B\u043E\u043D \u043E\u0442\u0447\u0435\u0442\u0430
 lecm-rpeditor_model.type.lecm-rpeditor_reportTemplate.description=\u0428\u0430\u0431\u043B\u043E\u043D \u043E\u0442\u0447\u0435\u0442\u0430
+lecm-rpeditor_model.property.lecm-rpeditor_templateCode.title=\u041A\u043E\u0434
+lecm-rpeditor_model.property.lecm-rpeditor_templateCode.description=\u041A\u043E\u0434
 lecm-rpeditor_model.association.lecm-rpeditor_reportTemplateFile.title=\u0424\u0430\u0439\u043B
 lecm-rpeditor_model.association.lecm-rpeditor_reportTemplateFile.description=\u0424\u0430\u0439\u043B \u043E\u0442\u0447\u0435\u0442\u0430
 lecm-rpeditor_model.association.lecm-rpeditor_reportTemplateType.title=\u0422\u0438\u043F
