ALF-1944: АРМ. Отчеты - настройки
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6618 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-arm/repo/src/main/config/messages/lecm-arm_ru.properties
+++ b/lecm-arm/repo/src/main/config/messages/lecm-arm_ru.properties
@@ -8,6 +8,8 @@ lecm-arm_model.association.lecm-arm_business-roles-assoc.title=\u0411\u0438\u043
 lecm-arm_model.type.lecm-arm_node.title=\u0423\u0437\u0435\u043B
 lecm-arm_model.association.lecm-arm_node-child-rule-assoc.title=\u0414\u0438\u043D\u0430\u043C\u0438\u0447\u0435\u0441\u043A\u043E\u0435 \u043F\u043E\u0441\u0442\u0440\u043E\u0435\u043D\u0438\u0435 \u0443\u0437\u043B\u043E\u0432
 
+lecm-arm_model.type.lecm-arm_reports-node.title=\u0423\u0437\u0435\u043B \u0441 \u043E\u0442\u0447\u0451\u0442\u0430\u043C\u0438
+
 lecm-arm_model.property.lecm-arm_types.title=\u0422\u0438\u043F\u044B
 lecm-arm_model.property.lecm-arm_order.title=\u041F\u043E\u0437\u0438\u0446\u0438\u044F
 lecm-arm_model.property.lecm-arm_search-query.title=\u041F\u043E\u0438\u0441\u043A\u043E\u0432\u044B\u0439 \u0437\u0430\u043F\u0440\u043E\u0441
