актуализировал настройки для форм согласования и подписания
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6628 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-workflow/repo/src/main/config/messages/lecm-workflow_ru.properties
+++ b/lecm-workflow/repo/src/main/config/messages/lecm-workflow_ru.properties
@@ -29,7 +29,7 @@ lecm-workflow_workflow-model.aspect.lecm-workflow_workflow-concurrency-aspect.ti
 lecm-workflow_workflow-model.property.lecm-workflow_workflow-concurrency.title=\u041f\u0440\u0438\u0437\u043d\u0430\u043a \u043f\u0430\u0440\u0430\u043b\u043b\u0435\u043b\u044c\u043d\u043e\u0441\u0442\u0438 \u0438\u043b\u0438 \u043f\u043e\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u0442\u0435\u043b\u044c\u043d\u043e\u0441\u0442\u0438
 
 lecm-workflow_workflow-model.aspect.lecm-workflow_assignee-order-aspect.title=\u0410\u0441\u043f\u0435\u043a\u0442 \u0441 \u043f\u043e\u0440\u044f\u0434\u043a\u043e\u0432\u044b\u043c \u043d\u043e\u043c\u0435\u0440\u043e\u043c \u0443\u0447\u0430\u0441\u0442\u043d\u0438\u043a\u0430 \u0411\u041f
-lecm-workflow_workflow-model.property.lecm-workflow_assignee-order.title=\u041f\u043e\u0440\u044f\u0434\u043a\u043e\u0432\u044b\u0439 \u043d\u043e\u043c\u0435\u0440 \u0443\u0447\u0430\u0441\u0442\u043d\u0438\u043a\u0430
+lecm-workflow_workflow-model.property.lecm-workflow_assignee-order.title=\u2116 \u043f/\u043f
 
 lecm-workflow_workflow-model.aspect.lecm-workflow_assignee-days-to-complete-aspect.title=\u0410\u0441\u043f\u0435\u043a\u0442 \u0441 \u043a\u043e\u043b\u0438\u0447\u0435\u0441\u0442\u0432\u043e\u043c \u0434\u043d\u0435\u0439 \u043d\u0430 \u0437\u0430\u0434\u0430\u0447\u0443
 lecm-workflow_workflow-model.property.lecm-workflow_assignee-days-to-complete.title=\u041a\u043e\u043b\u0438\u0447\u0435\u0441\u0442\u0432\u043e \u0434\u043d\u0435\u0439, \u0432\u044b\u0434\u0435\u043b\u0435\u043d\u043d\u044b\u0445 \u043d\u0430 \u0437\u0430\u0434\u0430\u0447\u0443
