--- a/lecm-arm/share/src/main/resources/alfresco/web-extension/ru/it/lecm/arm/form_ru.properties
+++ b/lecm-arm/share/src/main/resources/alfresco/web-extension/ru/it/lecm/arm/form_ru.properties
@@ -10,3 +10,4 @@ label.arm.field.add.fromModel=\u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \
 
 label.new-filter.btn=\u041D\u043E\u0432\u044B\u0439 \u0424\u0438\u043B\u044C\u0442\u0440
 label.create-filter.title=\u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435 \u0444\u0438\u043B\u044C\u0442\u0440\u0430
+arm.title.filteredLabel=(\u0441\u043E\u0434\u0435\u0440\u0436\u0438\u043C\u043E\u0435 \u043E\u0442\u0444\u0438\u043B\u044C\u0442\u0440\u043E\u0432\u0430\u043D\u043E)
