--- a/lecm-workflow/lecm-approval/repo/src/main/config/messages/lecm-approval-list_ru.properties
+++ b/lecm-workflow/lecm-approval/repo/src/main/config/messages/lecm-approval-list_ru.properties
@@ -1,7 +1,7 @@
 lecmApprovalResult_approvalResultListModel.type.lecmApprovalResult_approvalResultItem.title=\u0421\u043e\u0433\u043b\u0430\u0441\u0443\u044e\u0449\u0438\u0439 \u0441\u043e\u0442\u0440\u0443\u0434\u043d\u0438\u043a
 lecmApprovalResult_approvalResultListModel.type.lecmApprovalResult_approvalResultItem.description=\u0421\u043e\u0433\u043b\u0430\u0441\u0443\u044e\u0449\u0438\u0439 \u0441\u043e\u0442\u0440\u0443\u0434\u043d\u0438\u043a
-lecmApprovalResult_approvalResultListModel.property.lecmApprovalResult_approvalResultItemDecision.title=\u0420\u0435\u0437\u0443\u043b\u044c\u0442\u0430\u0442 \u0441\u043e\u0433\u043b\u0430\u0441\u043e\u0432\u0430\u043d\u0438\u044f
-lecmApprovalResult_approvalResultListModel.property.lecmApprovalResult_approvalResultItemDecision.description=\u0420\u0435\u0437\u0443\u043b\u044c\u0442\u0430\u0442 \u0441\u043e\u0433\u043b\u0430\u0441\u043e\u0432\u0430\u043d\u0438\u044f
+lecmApprovalResult_approvalResultListModel.property.lecmApprovalResult_approvalResultItemDecision.title=\u0420\u0435\u0437\u0443\u043b\u044c\u0442\u0430\u0442
+lecmApprovalResult_approvalResultListModel.property.lecmApprovalResult_approvalResultItemDecision.description=\u0420\u0435\u0437\u0443\u043b\u044c\u0442\u0430\u0442
 lecmApprovalResult_approvalResultListModel.property.lecmApprovalResult_approvalResultItemComment.title=\u0417\u0430\u043c\u0435\u0447\u0430\u043d\u0438\u044f
 lecmApprovalResult_approvalResultListModel.property.lecmApprovalResult_approvalResultItemComment.description=\u0417\u0430\u043c\u0435\u0447\u0430\u043d\u0438\u044f
 lecmApprovalResult_approvalResultListModel.association.lecmApprovalResult_approvalResultItemCommentAssoc.title=\u041f\u0440\u0438\u043b\u043e\u0436\u0435\u043d\u043d\u044b\u0439 \u0434\u043e\u043a\u0443\u043c\u0435\u043d\u0442
@@ -9,8 +9,8 @@ lecmApprovalResult_approvalResultListModel.association.lecmApprovalResult_approv
 
 lecmApprovalResult_approvalResultListModel.type.lecmApprovalResult_approvalResultList.title=\u0421\u043f\u0438\u0441\u043e\u043a \u0441\u043e\u0433\u043b\u0430\u0441\u043e\u0432\u0430\u043d\u0438\u044f
 lecmApprovalResult_approvalResultListModel.type.lecmApprovalResult_approvalResultList.description=\u0421\u043f\u0438\u0441\u043e\u043a \u0441\u043e\u0433\u043b\u0430\u0441\u043e\u0432\u0430\u043d\u0438\u044f
-lecmApprovalResult_approvalResultListModel.property.lecmApprovalResult_approvalResultListDecision.title=\u0420\u0435\u0437\u0443\u043b\u044c\u0442\u0430\u0442 \u0441\u043e\u0433\u043b\u0430\u0441\u043e\u0432\u0430\u043d\u0438\u044f
-lecmApprovalResult_approvalResultListModel.property.lecmApprovalResult_approvalResultListDecision.description=\u0420\u0435\u0437\u0443\u043b\u044c\u0442\u0430\u0442 \u0441\u043e\u0433\u043b\u0430\u0441\u043e\u0432\u0430\u043d\u0438\u044f
+lecmApprovalResult_approvalResultListModel.property.lecmApprovalResult_approvalResultListDecision.title=\u0420\u0435\u0437\u0443\u043b\u044c\u0442\u0430\u0442
+lecmApprovalResult_approvalResultListModel.property.lecmApprovalResult_approvalResultListDecision.description=\u0420\u0435\u0437\u0443\u043b\u044c\u0442\u0430\u0442
 
 listconstraint.lecmApprovalResult_approvalResultItemDecisionConstraint.NO_DECISION=\u041d\u0435\u0442 \u0440\u0435\u0448\u0435\u043d\u0438\u044f
 listconstraint.lecmApprovalResult_approvalResultItemDecisionConstraint.APPROVED=\u0421\u043e\u0433\u043b\u0430\u0441\u043e\u0432\u0430\u043d
