--- a/lecm-group-actions/repo/src/main/config/messages/group-actions_ru.properties
+++ b/lecm-group-actions/repo/src/main/config/messages/group-actions_ru.properties
@@ -8,3 +8,4 @@ lecm-group-actions_model.property.lecm-group-actions_form-fields-ref.title=\u041
 lecm-group-actions_model.property.lecm-group-actions_field-id.title=ID \u041F\u043E\u043B\u044F
 lecm-group-actions_model.property.lecm-group-actions_field-type.title=\u0422\u0438\u043F \u0434\u0430\u043D\u043D\u044B\u0445
 lecm-group-actions_model.property.lecm-group-actions_forCollection.title=\u0412\u044B\u0437\u044B\u0432\u0430\u0442\u044C \u0434\u043B\u044F \u043A\u043E\u043B\u043B\u0435\u043A\u0446\u0438\u0438
+lecm-group-actions_model.property.lecm-group-actions_field-default-value.title=\u0417\u043D\u0430\u0447\u0435\u043D\u0438\u0435 \u043F\u043E \u0443\u043C\u043E\u043B\u0447\u0430\u043D\u0438\u044E
