--- a/lecm-base/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/base-share/toolbar/base.toolbar.get_ru.properties
+++ b/lecm-base/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/base-share/toolbar/base.toolbar.get_ru.properties
@@ -1,8 +1,4 @@
-lecm.arm.add-element=\u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u044D\u043B\u0435\u043C\u0435\u043D\u0442
-lecm.arm.delete-element=\u0423\u0434\u0430\u043B\u0438\u0442\u044C \u044D\u043B\u0435\u043C\u0435\u043D\u0442
-lecm.arm.reports-node.add=\u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0443\u0437\u0435\u043B \u0441 \u043E\u0442\u0447\u0451\u0442\u0430\u043C\u0438
-lecm.arm.export=\u042D\u043A\u0441\u043F\u043E\u0440\u0442
-lecm.arm.import=\u0418\u043C\u043F\u043E\u0440\u0442
+button.import-xml=\u0418\u043C\u043F\u043E\u0440\u0442 XML
 
 title.select-file=\u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0444\u0430\u0439\u043B
 title.import=\u0418\u043C\u043F\u043E\u0440\u0442
