--- a/lecm-reports-editor/repo/src/main/config/messages/reports-editor_ru.properties
+++ b/lecm-reports-editor/repo/src/main/config/messages/reports-editor_ru.properties
@@ -81,6 +81,8 @@ lecm-rpeditor_model.association.lecm-rpeditor_reportProviderAssoc.title=\u041F\u
 lecm-rpeditor_model.association.lecm-rpeditor_reportProviderAssoc.description=\u041F\u0440\u043E\u0432\u0430\u0439\u0434\u0435\u0440 \u043E\u0442\u0447\u0435\u0442\u0430
 lecm-rpeditor_model.association.lecm-rpeditor_reportTemplateAssoc.title=\u0428\u0430\u0431\u043B\u043E\u043D
 lecm-rpeditor_model.association.lecm-rpeditor_reportTemplateAssoc.description=\u0428\u0430\u0431\u043B\u043E\u043D \u043E\u0442\u0447\u0435\u0442\u0430
+lecm-rpeditor_model.association.lecm-rpeditor_businessRolesAssoc.description=\u0414\u043E\u0441\u0442\u0443\u043F\u0435\u043D \u0434\u043B\u044F \u0440\u043E\u043B\u0435\u0439
+lecm-rpeditor_model.association.lecm-rpeditor_businessRolesAssoc.title=\u0414\u043E\u0441\u0442\u0443\u043F\u0435\u043D \u0434\u043B\u044F \u0440\u043E\u043B\u0435\u0439
 
 lecm-rpeditor_model.association.lecm-rpeditor_parentReportTemplateAssoc.title=\u0428\u0430\u0431\u043B\u043E\u043D \u0440\u043E\u0434\u0438\u0442\u0435\u043B\u044F
 lecm-rpeditor_model.association.lecm-rpeditor_parentReportTemplateAssoc.description=\u0428\u0430\u0431\u043B\u043E\u043D \u0440\u043E\u0434\u0438\u0442\u0435\u043B\u044F
