ALF-1980: При наведении курсора мыши на "АРМ СЭД" в выпадающем списке "Еще" выводится сообщение на английском
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@6734 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-arm/share/src/main/resources/alfresco/web-extension/ru/it/lecm/arm/form_ru.properties
+++ b/lecm-arm/share/src/main/resources/alfresco/web-extension/ru/it/lecm/arm/form_ru.properties
@@ -1,5 +1,7 @@
 header.arm-settings.label=\u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u0410\u0420\u041C
+header.arm-settings.description=\u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u0410\u0420\u041C
 header.arm.label=\u0410\u0420\u041C \u0421\u042D\u0414
+header.arm.description=\u0410\u0420\u041C \u0421\u042D\u0414
 
 page.title.arm.settings=\u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u0410\u0420\u041C
 page.content.filter.labe=(\u0441\u043E\u0434\u0435\u0440\u0436\u0438\u043C\u043E\u0435 \u043E\u0442\u0444\u0438\u043B\u044C\u0442\u0440\u043E\u0432\u0430\u043D\u043E)
