--- a/lecm-nd/share/src/main/resources/alfresco/web-extension/ru/it/lecm/nd/nd_ru.properties
+++ b/lecm-nd/share/src/main/resources/alfresco/web-extension/ru/it/lecm/nd/nd_ru.properties
@@ -9,15 +9,7 @@ header.outgoing-list.description=\u0418\u0441\u0445\u043e\u0434\u044f\u0449\u043
 
 
 
-page.lecm-ord_document=\u041e\u0420\u0414
-button.lecm-ord_document.new=\u041d\u043e\u0432\u044b\u0439 \u041e\u0420\u0414
-label.create-lecm-ord_document=\u0421\u043e\u0437\u0434\u0430\u0442\u044c \u041e\u0420\u0414
-label.filter-lecm-ord_document=\u041e\u0420\u0414
-
-label.ord.common=\u0410\u0442\u0440\u0438\u0431\u0443\u0442\u044b
-label.ord.items=\u041f\u0443\u043d\u043a\u0442\u044b
-label.ord.agreement=\u0421\u043e\u0433\u043b\u0430\u0441\u043e\u0432\u0430\u043d\u0438\u0435/\u041f\u043e\u0434\u043f\u0438\u0441\u0430\u043d\u0438\u0435
-
-ord.item.edit.form.title=\u0418\u0437\u043c\u0435\u043d\u0438\u0442\u044c
-ord.item.create.form.title=\u0421\u043e\u0437\u0434\u0430\u0442\u044c
-ord.item.view.form.title=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0435\u0442\u044c
+page.lecm-nd_document=\u041e\u0420\u0414
+button.lecm-nd_document.new=\u041d\u043e\u0432\u044b\u0439 \u041e\u0420\u0414
+label.create-lecm-nd_document=\u0421\u043e\u0437\u0434\u0430\u0442\u044c \u041e\u0420\u0414
+label.filter-lecm-nd_document=\u041e\u0420\u0414
